# mpt-crypto

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: build.yml
cmake/: Findsecp256k1.cmake
conan/lockfile/: regenerate.sh
include/: secp256k1_mpt.h
src/: bulletproof_aggregated.c  mpt_scalar.c  proof_compact_clawback.c
src/utility/: mpt_utility.cpp
tests/: CMakeLists.txt  test_bulletproof_agg.c  test_commitments.c  test_compact_clawback.c  test_elgamal.c  test_elgamal_verify.c  test_equality_proof.c  test_ipa.c  test_link_proof.c  test_pok_sk.c  test_same_plaintext.c  test_same_plaintext_multi.c  test_same_plaintext_multi_shared_r.c  test_utils.h
